--- a/Teamprotecht - HomePage.html
+++ b/Teamprotecht - HomePage.html
@@ -23,7 +23,7 @@
                     <ul>
                         
                         <!--3 different tabs with links to each page-->
-                        <li><img src="C:\Users\jaich\OneDrive - Aston University\Documents\Teamprotecht\CSS Images\logo.png" width="90px" height="65px"</li>
+                        <li><img src="CSS Images\logo.png" width="90px" height="65px"</li>
                         <li><a href="">Browse</a></li>
                         <li><a href="">iPhone</a> </li>
                         <li><a href="">Android</a></li>
@@ -35,7 +35,7 @@
                 </nav>
 
                 <img_slides>
-                    <img src="c:\Users\jaich\OneDrive - Aston University\Documents\Teamprotecht\CSS Images\iPhone15_new.png" alt="" width="100%" height="100%">
+                    <img src="CSS Images\iPhone15_new.png" alt="" width="100%" height="100%">
                 </img_slides>
 
                 <main>
@@ -43,16 +43,16 @@
 
                     <div class="row">
                         <div class="column">
-                          <img src="C:\Users\jaich\OneDrive - Aston University\Documents\Teamprotecht\CSS Images\iphone_15_1.jpg" alt="" style="width:50%">
+                          <img src="CSS Images\iphone_15_1.jpg" alt="" style="width:50%">
                         </div>
                         <div class="column">
-                          <img src="C:\Users\jaich\OneDrive - Aston University\Documents\Teamprotecht\CSS Images\iphone_15_2.jpg" alt="Forest" style="width:50%">
+                          <img src="CSS Images\iphone_15_2.jpg" alt="Forest" style="width:50%">
                         </div>
                         <div class="column">
-                          <img src="C:\Users\jaich\OneDrive - Aston University\Documents\Teamprotecht\CSS Images\iphone_15_3.jpg" alt="Mountains" style="width:50%">
+                          <img src="CSS Images\iphone_15_3.jpg" alt="Mountains" style="width:50%">
                         </div>
                         <div class="column">
-                            <img src="C:\Users\jaich\OneDrive - Aston University\Documents\Teamprotecht\CSS Images\iphone_15_4.jpg" alt="Mountains" style="width:50%">
+                            <img src="CSS Images\iphone_15_4.jpg" alt="Mountains" style="width:50%">
                           </div>
                     </div>
                 </main>
