--- a/stock-page.html
+++ b/stock-page.html
@@ -169,7 +169,8 @@
         <br>
 
         <div class="progress">
-            <div class="progress-bar progress-bar-striped-active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+            <div class="progress-bar progress-bar-striped-active" role="progressbar" aria-valuenow="20"
+                aria-valuemin="0" aria-valuemax="100" style="width: 20%">
                 20%
             </div>
         </div>
@@ -210,18 +211,6 @@
 
         // Get the element with id="defaultOpen" and click on it
         document.getElementById("defaultOpen").click();
-
-        function validateOrder() {
-            const fields = document.getElementsByTagName("input");
-            for (let count = 0; count < fields.length; count++) {
-                fields[count].style.display = "block";
-            }
-            if (!fields.checkValidity()) {
-                document.getElementsByTagName("input").innerHTML = fields.validationMessage;
-            } else {
-                alert("Order has been added successfully!");
-            }
-        }
     </script>
 </body>
 
