--- a/login.html
+++ b/login.html
@@ -1,53 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="login/signup.css">
+    <title>Employee Login</title>
+    <!-- Add your CSS link here -->
+    <link rel="stylesheet" type="text/css" href="stocksystem.css">
 </head>
+
 <body>
     <div class="navbar">
         <!-- Menu Bar -->
         <ul>
-            <div class="logo-container1">
-                <img src="teamprotech.png.png" alt="Logo 1">
-              </div>
+          <div class="logo-container1">
+            <img src="teamprotech.png.png" alt="Logo 1">
+          </div>
+            <li><a href="http://localhost/Year%202%20Team%20Project/stocksystem.html">Stock View</a></li>
+            <li><a href="http://localhost/Year%202%20Team%20Project/confirmorders.html">Confirm Orders</a></li>
+            <li><a href="http://localhost/Year%202%20Team%20Project/pendingorders.html">Pending Orders</a></li>
+            <li><a href="http://localhost/Year%202%20Team%20Project/fulfilledorders.html">Fulfilled Orders</a></li>
+            <li><a href="file:///C:/xampp/htdocs/Year%202%20Team%20Project/stocksystem.html">Stock Put Away</a></li>
+            <li class="logout-link"><a href="http://localhost/Year%202%20Team%20Project/login.html" onclick="logout()">Logout</a></li>
         </ul>
     </div>
-    <div class="container">
+
+    <div class="header">
+      <!-- Logos and customer login/signup -->
+      <div class="logo-container1">
+          <img src="userlogo.png.png" alt="Logo 1">
+      </div>
+      <div class="login-signup">
+          <a href="http://localhost/Year%202%20Team%20Project/login.html">Login</a>
+          <a href="http://localhost/Year%202%20Team%20Project/signup.html">Signup</a>
+      </div>
+  </div>
+
+    <div class="main-content">
         <h1>Employee Login</h1>
-        <p class="welcome-text">Welcome! Please enter your username and password to log in.</p>
-
+        <!-- Form for stock system -->
         <form>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required><br><br>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required><br><br>
-
-             <!-- Remember me checkbox -->
-             <label for="remember">
-                <input type="checkbox" id="remember" name="remember"> Remember me
-            </label><br><br>
             
-            <input type="submit" value="Login">
+            <p>Use your organisation email and password to login.
+            </p>
+            <label for="employeeEmail">Email Address</label>
+            <input id="emailAddress" type="email" name="email" required />
+            <br><br>
+            <label for="employeePassword">Password&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+            <input id="inPassword" type="password" name="employeePassword"
+                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required />
+            <br><br>
+            <button class="loginbtn" onclick="validateForm()">Login</button>
+            <p>If you haven't created an account, click on the underlined link below.<br><a
+                    href="register-as-employee.html">Create an employee account</a></p>
         </form>
-        <p style="text-align: center;">Or login with</p>
-
-
-        <div class="login-options">
-            <a href="https://accounts.google.com/v3/signin/identifier?authuser=0&continue=https%3A%2F%2Fmyaccount.google.com%2F%3Futm_source%3Daccount-marketing-page%26utm_medium%3Dgo-to-account-button%26pli%3D1&ec=GAlAwAE&hl=en&service=accountsettings&flowName=GlifWebSignIn&flowEntry=AddSession&dsh=S84612906%3A1699934711495504&theme=glif" onclick="loginWithGoogle()">
-                <img src="google.png" alt="Login with Google">
-            </a>
-            <a href="https://en-gb.facebook.com/" onclick="loginWithFacebook()">
-                <img src="facebook.png" alt="Login with Facebook">
-            </a>
-            <a href="https://www.icloud.com/" onclick="loginWithApple()">
-                <img src="apple.png" alt="Login with Apple">
-            </a>
-        </div>
-
-        <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
     </div>
+
+    
+
 </body>
+
 </html>
