Change nav titles, made browse page

--- a/Teamprotecht - HomePage.html
+++ b/Teamprotecht - HomePage.html
@@ -25,13 +25,11 @@
                         
                         <!--3 different tabs with links to each page-->
                         <li><img src="CSS Images\logo.png" width="90px" height="65px"</li>
-                        <li><a href="">Browse</a></li>
-                        <li><a href="">iPhone</a> </li>
+                        <li><a href="Teamprotecht - HomePage.html">Home</a></li>
+                        <li><a href="browse.html">Browse</a></li>
                         <li><a href="">Android</a></li>
-                        <li style="float:right"><a href="#"><i class="fa fa-shopping-basket"></i></a></li>
-                        <li style="float:right"><a href="#"><i class="fa fa-user"></i></a></li>
-                        <li style="float:right"><a href="#"><i class="fa fa-search"></i></a></li>
-                        
+                        <li style="float:right"><a href="basket.html"><i class="fa fa-shopping-basket"></i></a></li>
+                        <li style="float:right"><a href="customerLogin.html"><i class="fa fa-user"></i></a></li>
                     </ul>
                 </nav>
 
@@ -100,3 +98,4 @@
                     </div>
                 </main>
     </body>
+</html>
