--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
 </head>
 
-<body class="p-3 m-0 border-0 bd-example m-0 border-0 bg-dark">
+<body class="bg-light-subtle">
 
     <header> <!--Navbar-->
-        <nav class="navbar bg-dark" style="color: blueviolet;">
+        <nav class="navbar bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" style="color: blueviolet;" href="index.html">
-                    <img src="logo.png" alt="TeamProTecht" width="30" height="24" class="d-inline-block align-text-top">
+                <a class="navbar-brand"href="index.html">
+                    <img src="images/logo.png" alt="TeamProTecht" width="30" height="24" class="d-inline-block align-text-top">
                     TeamProTecht
                 </a>
-
                 <div class="d-flex justify-content-between">
+                    <ul>
                     <a class="nav-link" href="#browse">
                         <li class="nav-item">Browse</li>
                     </a>
@@ -43,9 +43,10 @@
                     <a class="nav-link" href="android">
                         <li class="nav-item">Android</li>
                     </a>
+                </ul>
                 </div>
-
                 <div class="d-flex">
+                    <ul>
                     <a class="nav-link" href="#search">
                         <li class="nav-item"><i class="bi bi-search"></i></li>
                     </a>
@@ -55,39 +56,42 @@
                     <a class="nav-link" href="#basket">
                         <li class="nav-item"><i class="bi bi-basket2-fill"></i></li>
                     </a>
+                </ul>
                 </div>
+            
             </div>
         </nav>
     </header>
 
 
 
-    <main class="container">
+    <main class="center container">
         <!--Carousel slide-->
         </div>
         <div id="phoneSlides" class="carousel slide text-center" data-bs-ride="carousel">
-            <div class="carousel-inner">
+            <div class="carousel-inner align-content-center">
                 <div class="carousel-item active">
-                    <img src="samsungs23.png" class="d-block w-100" alt="iPhone 15">
+                    <img src="images/iphone.jpg" class="w-50" alt="iPhone 15">
                 </div>
                 <div class="carousel-item">
-                    <img src="pixel8.png" class="d-block w-100" alt="Google Pixel 8">
+                    <img src="images/pixel.jpeg" class="w-50 alt="Google Pixel 8">
                 </div>
                 <div class="carousel-item">
-                    <img src="samsungs23.png" class="d-block w-100" alt="Samsung 23">
+                    <img src="images/samsung.jpeg" class="w-50" alt="Samsung 23">
                 </div>
             </div>
         </div>
-    </main>
 <!--Featured Products-->
     <div class="container-fluid"> 
-        <h2 style="color: blueviolet;">Featured Products</h2>
-        <ul class="d-flex justify-content-lg-center">
-   <li class="nav-item"><a href="#"><img src="pixel8.png" alt="Phone1"></a></li> 
-     <li class="nav-item"><a href="#"><img src="pixel8.png" alt="Phone2"></a></li>   
-        <li class="nav-item"><a href="#"><img src="pixel8.png" alt="Phone3"></a></li>
+        <h2>Featured Products</h2>
+        <ul class="featured-products d-flex justify-content-lg-center">
+   <li class="nav-item"><a href="#"><img src="images/oneplus.jpeg" class="w-25 " alt="Phone1"><p>One Plus</p></a></li> 
+     <li class="nav-item"><a href="#"><img src="images/nokia.jpeg" class="w-25 " alt="Phone2"><p>Nokia</p></a></li>   
+        <li class="nav-item"><a href="#"><img src="images/xiaomi.jpeg" class="w-25 " alt="Phone3"><p>Xiaomi</p> </a></li>
+        <li class="nav-item"><a href="#"><img src="images/htc.jpeg" class="w-25 " alt="Phone4"><p>HTC</p> </a></li>
         </ul>
     </div>
+</main>
     <footer>
 
     </footer>
