changed the logo so it doesn't have the white background

--- a/login.html
+++ b/login.html
@@ -12,27 +12,13 @@
         <!-- Menu Bar -->
         <ul>
           <div class="logo-container1">
-            <img src="teamprotech.png.png" alt="Logo 1">
+            <img src="cs2tp_logo-removebg-preview (1).png" alt="Logo 1">
           </div>
-            <li><a href="http://localhost/Year%202%20Team%20Project/stocksystem.html">Stock View</a></li>
-            <li><a href="http://localhost/Year%202%20Team%20Project/confirmorders.html">Confirm Orders</a></li>
-            <li><a href="http://localhost/Year%202%20Team%20Project/pendingorders.html">Pending Orders</a></li>
-            <li><a href="http://localhost/Year%202%20Team%20Project/fulfilledorders.html">Fulfilled Orders</a></li>
-            <li><a href="file:///C:/xampp/htdocs/Year%202%20Team%20Project/stocksystem.html">Stock Put Away</a></li>
-            <li class="logout-link"><a href="http://localhost/Year%202%20Team%20Project/login.html" onclick="logout()">Logout</a></li>
+
         </ul>
     </div>
 
-    <div class="header">
-      <!-- Logos and customer login/signup -->
-      <div class="logo-container1">
-          <img src="userlogo.png.png" alt="Logo 1">
-      </div>
-      <div class="login-signup">
-          <a href="http://localhost/Year%202%20Team%20Project/login.html">Login</a>
-          <a href="http://localhost/Year%202%20Team%20Project/signup.html">Signup</a>
-      </div>
-  </div>
+
 
     <div class="main-content">
         <h1>Employee Login</h1>
