--- a/browse.html
+++ b/browse.html
@@ -23,14 +23,12 @@
         <!--Creating the navigation bar-->
                 <nav>
                     <ul>
-                        
-                        <!--3 different tabs with links to each page-->
-                        <li><img src="CSS Images\logo.png" width="90px" height="65px"></li>
-                        <li><a href="Teamprotecht - HomePage.html">Home</a></li>
-                        <li><a href="browse.html">Browse</a></li>
-                        <li style="float:right"><a href="basket.html"><i class="fa fa-shopping-basket"></i></a></li>
-                        <li style="float:right"><a href="customerLogin.html"><i class="fa fa-user"></i></a></li>
-                        
+                            <!--3 different tabs with links to each page-->
+                            <li><img src="CSS Images\logo.png" width="90px" height="65px"></li>
+                            <li><a href="HomePage.html">Home</a></li>
+                            <li><a href="browse.html">Browse</a></li>
+                            <li style="float:right"><a href="Product_Basket.php"><i class="fa fa-shopping-basket"></i></a></li>
+                            <li style="float:right"><a href="customerLogin.html"><i class="fa fa-user"></i></a></li>
                     </ul>
                 </nav>
 
