changes to the basket function

--- a/about us/aboutus.html
+++ b/about us/aboutus.html
@@ -70,7 +70,7 @@
                 <a href="#">Login to shop</a>
                 <a href="#">Signup to shop</a>
             </div>
-            <a href="#" class="shop-link">Shop</a> <!-- Moved "Shop" link after the options menu -->
+            <a href="" class="shop-link">Shop</a> <!-- Moved "Shop" link after the options menu -->
             <div class="search-bar">
                 <input type="text" id="search-input" placeholder="Search...">
                 <button type="button" id="search-btn">Search</button>
