reference to image

--- a/about us/aboutus.html
+++ b/about us/aboutus.html
@@ -70,10 +70,13 @@
                 <a href="#">Login to shop</a>
                 <a href="#">Signup to shop</a>
             </div>
-            <a href="" class="shop-link">Shop</a> <!-- Moved "Shop" link after the options menu -->
-            <div class="search-bar">
-                <input type="text" id="search-input" placeholder="Search...">
-                <button type="button" id="search-btn">Search</button>
+            <li><img src="../userside/CSS Images/logo.png" width="90px" height="65px"></li>
+            <li><a href="">Browse</a></li>
+            <li><a href="">iPhone</a> </li>
+            <li><a href="">Android</a></li>
+            <li style="float:right"><a href="#"><i class="fa fa-shopping-basket"></i></a></li>
+            <li style="float:right"><a href="#"><i class="fa fa-user"></i></a></li>
+            <li style="float:right"><a href="#"><i class="fa fa-search"></i></a></li>
         </div>
         <div id="search-message" style="display: none; color: red; margin-top: 10px; position: absolute; top: 50px; left: 10px;"></div>
         <!-- Container to display search messages -->
