--- a/about us/aboutus.html
+++ b/about us/aboutus.html
@@ -56,7 +56,7 @@
 </head>
 <body>
 
-    <header>
+    <header class="nav-bar">
         <div class="header-content">
             <input type="checkbox" id="options-toggle" class="options-toggle">
             <label for="options-toggle" class="options-button">
