i added slash took them out

--- a/userside/Teamprotecht - HomePage.html
+++ b/userside/Teamprotecht - HomePage.html
@@ -92,16 +92,16 @@
                   <div class="row">
                     <h1>Featured Products</h1>
                     <div class="column">
-                      <img src="/CSS Images HP/iphone_15_1.jpg">
+                      <img src="CSS Images HP/iphone_15_1.jpg">
                     </div>
                     <div class="column">
-                      <img src="/CSS Images HP/iphone_15_2.jpg">
+                      <img src="CSS Images HP/iphone_15_2.jpg">
                     </div>    
                     <div class="column">
-                      <img src="/CSS Images HP/iphone_15_3.jpg">
+                      <img src="CSS Images HP/iphone_15_3.jpg">
                     </div> 
                     <div class="column">
-                      <img src="/CSS Images HP/iphone_15_4.jpg">
+                      <img src="CSS Images HP/iphone_15_4.jpg">
                     </div>                          
                   </div>
 
