--- a/browse.html
+++ b/browse.html
@@ -29,7 +29,7 @@
                         
                         <!--3 different tabs with links to each page-->
                         <li><img src="CSS Images\logo.png" width="90px" height="65px"</li>
-                        <li><a href="homepage.html">Home</a></li>
+                        <li><a href="userside\Teamprotecht - HomePage.html">Home</a></li>
                         <li><a href="browse.html">Browse</a></li>
                         <li style="float:right"><a href="#"><i class="fa fa-shopping-basket"></i></a></li>
                         <li style="float:right"><a href="#"><i class="fa fa-user"></i></a></li>
