--- a/browse.html
+++ b/browse.html
@@ -10,7 +10,7 @@
         <!--Title of web page-->
         <title>Teamprotecht</title>
         <!--Attaching css file-->
-        <link rel="stylesheet" href="CSS Images\style.css" />
+        <link rel="stylesheet" href="style.css" />
         <!-- Add java script -->
       
         <!-- Add icon library -->
@@ -28,7 +28,7 @@
                     <ul>
                         
                         <!--3 different tabs with links to each page-->
-                        <li><img src="CSS Images\logo.png" width="90px" height="65px"</li>
+                        <li><img src="userside/CSS Images/logo.png" width="90px" height="65px"</li>
                         <li><a href="userside\Teamprotecht - HomePage.html">Home</a></li>
                         <li><a href="browse.html">Browse</a></li>
                         <li style="float:right"><a href="#"><i class="fa fa-shopping-basket"></i></a></li>
