--- a/userside/Teamprotecht - HomePage.html
+++ b/userside/Teamprotecht - HomePage.html
@@ -10,7 +10,7 @@
         <!--Title of web page-->
         <title>Teamprotecht</title>
         <!--Attaching css and js file-->
-        <link rel="stylesheet" href="CSS Images HP\style.css" />
+        <link rel="stylesheet" href="CSS Images HP/style.css" />
         <!-- Add icon library -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
