--- a/userside/Teamprotecht - HomePage.html
+++ b/userside/Teamprotecht - HomePage.html
@@ -10,7 +10,7 @@
         <!--Title of web page-->
         <title>Teamprotecht</title>
         <!--Attaching css and js file-->
-        <link rel="stylesheet" href="CSS Images HP/style.css" />
+        <link rel="stylesheet" href="hp.css" />
         <!-- Add icon library -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -25,7 +25,7 @@
                         
                         <!--3 different tabs with links to each page-->
                         <li><img src="CSS Images HP\logo.png" width="90px" height="65px"></li>
-                        <li><a href="">Browse</a></li>
+                        <li><a href="browse.html">Browse</a></li>
                         <li><a href="">iPhone</a> </li>
                         <li><a href="">Android</a></li>
                         <li style="float:right"><a href="#"><i class="fa fa-shopping-basket"></i></a></li>
