--- a/userside/Teamprotecht - HomePage.html
+++ b/userside/Teamprotecht - HomePage.html
@@ -26,7 +26,7 @@
     <ul>
       <!--3 different tabs with links to each page-->
       <li><img src="CSS Images HP\logo.png" width="90px" height="65px"></li>
-      <li><a href="browse.html">Browse</a></li>
+      <li><a href="browse.php">Browse</a></li>
       <li><a href="">iPhone</a> </li>
       <li><a href="">Android</a></li>
       <li style="float:right"><a href="#"><i class="fa fa-shopping-basket"></i></a></li>
